--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "tone": "0.11.11"
+    "tone": "^0.11.11"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
