--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.5.1",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-fcm": "^2.1.2",
         "cordova-plugin-ionic-webview": "^1.1.11",
         "cordova-plugin-nativeaudio": "^3.0.9",
         "cordova-plugin-splashscreen": "^4.0.3",
@@ -58,7 +59,8 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-nativeaudio": {}
+            "cordova-plugin-nativeaudio": {},
+            "cordova-plugin-fcm": {}
         }
     }
 }
