--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "2.0.1",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-fcm": "^2.1.2",
@@ -48,6 +49,7 @@
     "description": "An Ionic project",
     "cordova": {
         "platforms": [
+            "android",
             "ios"
         ],
         "plugins": {
